# mini-projects

./: .gitignore  LICENSE  README.md  README_cn.md
algorithms/algorithms-rs/: Cargo.toml
blind-watermark/: README.md  blind-watermark-text.py
blind_watermark/: README.md  README_cn.md  blind_watermark_text.py
calculator/: README.md  README_cn.md
calculator/calculator-rs/: Cargo.toml
calculator/calculator_rust/: Cargo.toml
convert-money/: README_cn.md
convert-money/convert-rs/: Cargo.toml
convert_money/: README.md  convert.py
convert_money/convert_rust/: Cargo.toml
donut/: README.md  README_cn.md
donut/donut-rs/: .rustfmt.toml  Cargo.toml
donut/donut_rust/: Cargo.toml  README.md
drawille/: README.md  README_cn.md
drawille/drawille-rs/: Cargo.toml
drawille/drawille-rs/benches/: speed-test.rs  speed_test.rs
drawille/drawille-rs/src/: lib.rs
drawille/drawille-rust/: Cargo.toml
drawille/drawille-rust/src/: lib.rs
framed-text/: README.md  framed-text.py  test.txt
framed-text/framed-text-rust/: Cargo.toml
framed_text/: README.md  framed_txt.py
framed_text/framed_text_rust/: Cargo.toml
passwd-generator/: README.md
passwd_generator/: README.md  generator.py
passwd_generator/rust/: Cargo.toml
print-tables/: README.md  print-tables.py
print-tables/print-tables-rs/: Cargo.toml
print_tables/: README.md
print_tables/print_tables_rust/: Cargo.toml
spark/: README.md  spark.py
spark/spark-rs/: Cargo.toml
termgraph/: README.md  termgraph.py  test.csv
tree-printer/: README.md  tree-printer.py
tree_printer/: tree_printer.py
(+59 files in other folders)
